# vigra_cmake_testing

./: .gitignore  .travis.yml  README.md  appveyor.yml  run.py
png_test_00/: CMakeLists.txt
png_test_01/: CMakeLists.txt  test_main.cpp
tiff_test_00/: CMakeLists.txt  test_main.cpp
tiff_test_01/: CMakeLists.txt  test_main.cpp
zlib_test_00/: CMakeLists.txt  main.cpp
zlib_test_01/: CMakeLists.txt  main.cpp  test_main.cpp
